[tool.poetry]
name = "optimg"
version = "0.1.0"
description = ""
authors = ["SoSaymon <szymon.chirowski@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
python-magic-bin = "^0.4.14"
python-multipart = "^0.0.9"
gunicorn = "^21.2.0"
pytesseract = "^0.3.10"
tesseract = "^0.1.3"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
